# route-explorer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MapWidget.cpp  MapWidget.h  README.md  TrackStatsWidget.cpp  cmake_install.cmake  download_resources.sh  gpx_viewer  gpxparser.cpp  main.cpp  mainwindow.cpp  mainwindow.h  qrc_resources.cpp  resources.qrc  route-explorer.pro
gpx/: A_Load_of_BS_600k.gpx  Campo_400k_2025_FINAL.gpx
gpx_viewer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
gpx_viewer_autogen/6YEA5652QU/: moc_MapWidget.cpp.d  moc_TrackStatsWidget.cpp.d  moc_mainwindow.cpp.d
gpx_viewer_autogen/EWIEGA46WW/: moc_MapWidget.cpp  moc_MapWidget.cpp.d  moc_TrackStatsWidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qcustomplot.cpp.d
gpx_viewer_autogen/W4YIVCY7PI/: moc_qcustomplot.cpp.d
include/: ElevationView3D.h  ElevationView3D_old.h  FlythroughController.h  GpxParser.h  LandingPage.h  MainWindow.h  MapWidget.h  RouteData.h  RouteRenderer.h  TerrainService.h  TrackStatsWidget.h  WeatherService.h  WeatherWidget.h  build_info.h  debug_helper.h  gpxparser.h  logging.h  mainwindow.h
resources/: resources.qrc
src/: ElevationView3D.cpp  ElevationView3D_old.cpp  FlythroughController.cpp  GpxParser.cpp  LandingPage.cpp  MainWindow.cpp  MapWidget.cpp  RouteData.cpp  RouteRenderer.cpp  TerrainService.cpp  TrackStatsWidget.cpp  WeatherService.cpp  WeatherWidget.cpp  build_info.cpp  gpxparser.cpp  main.cpp  mainwindow.cpp
tests/: CMakeLists.txt  flythroughcontroller_test.cpp  gpxparser_test.cpp  routedata_test.cpp
